--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/sockjs-client": "^1.5.3",
     "@types/stompjs": "^2.3.6",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "http-proxy-middleware": "^2.0.6",
     "net": "^1.0.2",
     "qrcode.react": "^3.1.0",
@@ -20,8 +22,12 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "set DANGEROUSLY_DISABLE_HOST_CHECK=true && react-scripts start",
+    "start": "react-scripts start",
+    "start:dev": "env-cmd -f .env.development react-scripts start",
+    "start:prod": "env-cmd -f .env.production react-scripts start",
     "build": "react-scripts build",
+    "build:dev": "env-cmd -f .env.development react-scripts build",
+    "build:prod": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
