--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "typescript": "^4.9.5"
