--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "sockjs-client": "^1.6.1",
